# community-engagement-protocol

./: .env  .gitignore  Anchor.toml  README.md  deploy-keypair.json  package.json
programs/community-engagement-protocol/: Cargo.toml
programs/community-engagement-protocol/src/: errors.rs  group_hub_test.rs  lib.rs
programs/community-engagement-protocol/src/achievement/: instructions.rs  mod.rs  state.rs
programs/community-engagement-protocol/src/brand/: instructions.rs  state.rs
programs/community-engagement-protocol/src/group_hub/: instructions.rs  state.rs
programs/community-engagement-protocol/src/membership/: errors.rs  instructions.rs  mod.rs  state.rs
programs/community-engagement-protocol/src/reward/: instructions.rs  state.rs
scripts/: update-tronic-admin.js  update-tronic-admin.ts
tests/: achievement_tests.ts  brand_tests.ts  common.ts  community-engagement-protocol.ts  group_hub_tests.ts  membership_tests.ts  reward_tests.ts  user_achievements_tests.ts
